# dropspot

./: .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.yaml  flake.nix  render.yaml  rust-toolchain.toml  sqlx.toml
.opencode/: config.json  config.jsonc  opencode.json
.sqlx/: query-03fdd00302c1a320de526fc7ad5abef5be6e1eef884701b8494330d1676d4bfe.json  query-07242976c047e22ea035ecc53b33a7c347ce201c17c70eb48c5a8ea956d988c9.json  query-0b51a13e53c1fb7cfe0d25a3da04775f87a8b2735cf4850ee5c74435c67d34c1.json  query-0b51ef28f20a30dedf9c25fcefb7d6f9ce0c3624521c7c248cb91d03f5c6a19f.json  query-11a7c6e73c0177ccbc2586279077aece97e3768607bfc9a28749de28c999b121.json  query-176cb3d39d35316fbf251fc76b1fe7d2555d398ed56aa4942d427a3a890c7caf.json  query-17761647360c387058b9f94c1522ff0a6c8abe117c8abe73caa7887b623c579e.json  query-17ce0502ec2d93395f0816da851893952f5bd426264f3f416e52b59228f658e6.json  query-17f60d113cfe5e1839ca8e38214c189818c2acf582562c6eba75f3424c446b93.json  query-1905496979d0893d5f88d53d54720926586736291496d1e4cdc78fb00fc323c6.json  query-19d2d4c5e140a116db1a87b38639f6715a4991e552ee96d270f279be0b2712f3.json  query-2b5de33cce5fa7a0f38c787c0d06c9b2f3e9f57e73d4c482413fcfdd2ecc0857.json  query-2c0cf4310ee4f1ca84b7834ef4818e1e1f1898552740d8a679e1240781c08986.json  query-37b1038c47238b57c94ac686a5afbd8d199397d81a3c365ff5e9260c0faefc7e.json  query-3a98e06308f39b06d0648341ee9d3502d7a11794f13867c39f96a98b95e5396d.json  query-4100b5447f9bdf180a19d91cf2f3ec94f7cbdaaca8e545bc7e33948e20e3b8a4.json  query-42a41fddd8c8e5e096dce778dd96929ae454e15e76de3cae1ef50652401c50ca.json  query-4d03953bd0a03f7e895758bbfdbb5be7f385d8803b81aad2a2e1874b1d3f4828.json  query-52d4f1813584cbd021e843222eff05af89be2f82957218a8e862f4d58545ef31.json  query-58a1c3a9f0785c30281e503cfe593e240b61fd368e44c30c367558726bfb35be.json  query-5e30c12d2e6b71e6207f6f207eb327bdcaec12771155d8117a89fb16880d35a1.json  query-5e84f8df9b71f35f5726d2f2225ab25b63bd8cf939300eb5df3b1932dfa258a4.json  query-6104e11ad808606df6137ca290273d1257ba4fa4fefe6f7d081f63f5008483b8.json  query-6b4b6e4cab28a0fe3099b65726eecc0baf9035088af054ee4be0f14948db3ea4.json  query-71dc74fdfbf0144f6eb1b596a2eeaf5afbc4c3f68b80c67e74c15ac16b1fb9e8.json  query-7790e0d82de093687391643ef4933f6a138f0be9f515d1244c913d2c67b278b4.json  query-825fcaab6a6bad58048e2b949ced76244fc19fe0eccd0dc2a00c191bb54d5201.json  query-8725cfa7f61a56d642d094d41e6963dd337818870b89d30b800959959c6e081c.json  query-8d70ce2cdfddc6b2596ed842a9401ef89a6e8828a75a65851fc4da52b4a1f3e3.json  query-96bf521d90f214555d01641822d3bb576bd385d7b1e1c907cb69f47489f50c78.json  query-982e5d17971ae2441c4d0bd0388445e8ca1be30de1a4c091592413f41302b2d7.json  query-99e902fb8149a536ef78a63179046c26e9b59212cedf7baa4d6af8371fecb86a.json  query-9a84a44ac55729617a74236d23fcee200d02c019ea9a29076493ddda6e236ad2.json  query-9ab9365d8b301fdee8e4de91fd3090be23fb8013a45b7402e39f5fc237ec385a.json  query-a3c32c05afa0b18fc84d38b7715786c5b4e2f3dd13cf47a9ad67a5d5cf2a0f96.json  query-a94558c690c0dafa01facf19522acdbe1d1c540f7e9f0df9d2ec2d6169572ad5.json  query-abd189d19a59f8356b8fc8cc84137f406bd7b949baa1a20626cb2d1e85a67e8c.json  query-ae7f977cda42d9044b3e3f05b14d053651815126119becb5482b3c8ced1faea3.json  query-b3876b52260f09e56757bcdeec5645a57c5614fd903c11c2929503dd210e0fc6.json  query-b60277f7847c004ae1624209f3ca2f413dd84a74ad4a61bccef4089d79753ed4.json  (+11 more)
cli/: Cargo.toml
cli/src/: main.rs  watch.rs
core/: Cargo.toml
core/src/: adapter.rs  auth.rs  constants.rs  download.rs  encryption.rs  error.rs  file.rs  lib.rs  settings.rs  storage.rs  upload.rs  user.rs  validation.rs
core/src/integration/: gcs.rs  integration.rs  local.rs  mod.rs
migrations/: 0001_create_file.sql  0001_initial.sql  0001_user_file.sql  0002_user.sql
scripts/: build-wasm.sh  deploy-build.sh  deploy-pre-deploy.sh  deploy-start.sh  migrate-database.sh
server/: Cargo.toml
server/src/: config.rs  main.rs  state.rs  tracing.rs  types.rs  watch.rs
server/src/adapter/: adapter.rs  gcp.rs  local.rs  mod.rs  s3.rs
server/src/auth/: claims.rs  mod.rs  password.rs  storage.rs  token.rs
server/src/cli/: auth.rs  file.rs  mod.rs  server.rs
server/src/db/: connect.rs  download.rs  error.rs  file.rs  member.rs  mod.rs  onboarding.rs  organisation.rs  settings.rs  types.rs  upload.rs  user.rs
server/src/db/integration/: gcs.rs  integration.rs  local.rs  mod.rs
server/src/handlers/: download.rs  file.rs  health.rs  mod.rs  root.rs  settings.rs  upload.rs  user.rs  utils.rs
server/src/handlers/integration/: gcs.rs  integration.rs  local.rs  mod.rs
server/src/handlers/web/: file.rs  header.rs  index.rs  integration.rs  mod.rs  onboarding.rs  settings.rs  template.rs  user.rs
server/src/handlers/web/integration/: gcs.rs
server/src/middleware/: auth.rs
server/src/permissions/: file.rs
server/src/storage/: gcp.rs  gcs.rs  local.rs  mod.rs  s3.rs  storage.rs
server/templates/: delete_file.html  download.html  files.html  files_unauthed.html  gcs_integration.html  header.html  index.html  limits.html  local_integration.html  login.html  onboarding.html  onboarding_record.html  settings.html  settings_unauthed.html  settings_update.html  settings_user_update.html  user_edit.html  user_view.html
src/: download.rs  file.rs  handlers.rs  main.rs  state.rs  upload.rs  watch.rs
src/core/: constants.rs  download.rs  encryption.rs  file.rs  mod.rs  upload.rs
src/db/: connect.rs  download.rs  file.rs  mod.rs  upload.rs
src/lib/: download.rs  upload.rs
src/server/: handlers.rs  mod.rs  types.rs
src/server/db/: connect.rs  file.rs  mod.rs  upload.rs
static/: not_found.html
static/dropspot/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
templates/: index.html
web/: build.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
web/src/: auth.ts  background.css  background.ts  download.css  download.ts  file.css  form.css  header.css  index.css  index.ts  material.css  menu.css  settings.css  storage.ts  style.ts  theme.css  uploads.css  utils.css  utils.ts
(+68 files in other folders)
