[package]
name = "dropspot-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
http-serde.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
regex.workspace = true

dropspot-core.path = "../core"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
google-cloud-storage = "1.14.0"
rpassword = "7.5.4"

[features]
default = ["web"] # Might remove this

# When selected, compiles DropSpot web features into the server
web = []
