[package]
name = "dropspot-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
http-serde.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
regex.workspace = true

dropspot.path = "../core"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
google-cloud-storage = "1.14.0"
rpassword = "7.5.4"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.11", features = ["fs", "trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
mime_guess = "2.0.5"

[features]
default = ["client", "server", "web"] # Might remove this

# These features split up compilation based on what the end user wants to use
# Server capabilities shouldn't be compiled if the executable only uses the client CLI tools
client = []
server = []
# Enable web endpoints (not just REST)
web = ["server"]
